<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlach</string>
    <string name="hello">Hello World, HelloAndroid!</string>
    <string name="please_log_in">Please login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">com.appspot.potlachkk.longinpreferences</string>
	<string name="preference_file_key_user">com.appspot.potlachkk.longinpreferences.user</string>
	<string name="preference_file_key_password">com.appspot.potlachkk.longinpreferences.password</string>
	<string name="login_ok">Login OK</string>
	<string name="potlach_perm_label">Potlach Permission</string>
	<string name="potlach_perm">Potlach application has access to yours Gift Chains.</string>
	<string name="date_format">dd.MM.yyyy HH:mm</string>
	<string name="text_chain_activity_update_date">Chain updated on: </string>
	<string name="image_content_descriptor">Gift image</string>
	<string name="gift_created_by_text_label">Created by:</string>
	<string name="gift_created_on_text_label">Created on:</string>
	<string name="gift_like_count_text_label">Liked by:</string>
	<string name="text_placeholder">-</string>
	<string name="gift_like_button_label">Like it!</string>
	<string name="gift_flag_button_label">Flag</string>
	<string name="gift_unlike_button_label">Unlike it!</string>
	<string name="gift_unflag_button_label">Unflag</string>
	<string name="you">you</string>
	<string name="preference_file_key_show_flagged">show_flagged</string>
	<string name="menu_option_show_flagged">Show flagged gifts</string>
	<string name="show_flagged_gift_enabled_text">Flagged gifts enabled!</string>
	<string name="show_flagged_gift_disabled_text">Flagged gifts disabled!</string>
	<string name="menu_option_log_out">Log out</string>
	<string name="chain_list_manu_add">Add chain</string>
	<string name="chain_manu_add">Add gift</string>
	<string name="gift_create_cancel_button_label">Cancel</string>
	<string name="gift_create_OK_button_label">Post gift</string>
	<string name="gift_create_form_title_hint">Title</string>
	<string name="gift_create_form_text_hint">Text</string>
	<string name="top_givers_list_label">Top Gift Givers</string>
	<string name="action_search">Search for title</string>
	<string name="menu_option_search">Search</string>
	<string name="menu_option_schedulers">Scheduler</string>
	<string name="menu_option_top_givers">Top givers</string>
	<string name="menu_scheduler_1min">1 minute</string>
	<string name="menu_scheduler_5min">5 minutes</string>
	<string name="menu_scheduler_60min">60 minutes</string>
	<string name="preference_key_sheduler">scheduler</string>
	<string name="scheduler_one_message">Updates every minute.</string>
	<string name="scheduler_fife_message">Updates every fife minutes.</string>
	<string name="scheduler_sixty_message">Updates every sixty minutes.</string>
	<string name="logout">You have been logged out.</string>
	<string name="bad_credentials">Bad credentials</string>
	<string name="gift_create_view_title">Create gift</string>
	<string name="gift_create_from_camera">Run camera</string>
	<string name="gift_create_image">Preview</string>
	<string name="camera_cancelled">Camera cancelled</string>
	<string name="camera_error">Camera error</string>
	<string name="login_button">Log in</string>
</resources>
