<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
         android:id="@+id/gift_title_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/standard_padding"
         android:text="@string/text_placeholder"
         android:textSize="@dimen/midle_title" />
     
     <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
			
         	<ImageView
         	    android:id="@+id/gift_image"
         	    android:layout_width="match_parent"
         	    android:layout_height="wrap_content"
         	    android:layout_weight="2"
         	    android:adjustViewBounds="true"
         	    android:contentDescription="@string/image_content_descriptor"
         	    android:padding="@dimen/standard_padding"
         	    android:src="@drawable/placeholder" />
         	
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="right"
        	    android:layout_weight="3"
        	    android:orientation="vertical"
        	    android:paddingLeft="@dimen/big_padding" >
    			
        	   <TextView
        	       android:id="@+id/gift_created_by_text_label"
        	       android:layout_width="wrap_content"
        	       android:layout_height="wrap_content"
        	       android:text="@string/gift_created_by_text_label"
        	       android:textSize="@dimen/small_text" />
        	    
        	   <TextView
        	       android:id="@+id/gift_created_by_text"
        	       android:layout_width="wrap_content"
        	       android:layout_height="wrap_content"
        	       android:text="@string/text_placeholder"
        	       android:textSize="@dimen/small_text" />
        	   
        	   <TextView
        	       android:id="@+id/gift_created_on_text_label"
        	       android:layout_width="wrap_content"
        	       android:layout_height="wrap_content"
        	       android:text="@string/gift_created_on_text_label"
        	       android:textSize="@dimen/small_text" />
        	    
        	   <TextView
        	       android:id="@+id/gift_created_on_text"
        	       android:layout_width="wrap_content"
        	       android:layout_height="wrap_content"
        	       android:text="@string/text_placeholder"
        	       android:textSize="@dimen/small_text" />
        	    
        	   <TextView
        	       android:id="@+id/gift_like_count_text_label"
        	       android:layout_width="wrap_content"
        	       android:layout_height="wrap_content"
        	       android:text="@string/gift_like_count_text_label"
        	       android:textSize="@dimen/small_text" />
        	    
        	    <TextView
        	        android:id="@+id/gift_like_count_text"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/text_placeholder"
        	        android:textSize="@dimen/small_text" />
        	    
    		</LinearLayout>         
		</LinearLayout>
	
		<TextView
		    android:id="@+id/gift_text_text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/big_padding"
		    android:text="@string/text_placeholder"
		    android:textSize="@dimen/normal_text" />

     	<LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >

     		<ToggleButton
     		    android:id="@+id/gift_like_button"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:layout_weight="1"
     		    android:onClick="likeGiftAction"
     		    android:textOff="@string/gift_like_button_label"
     		    android:textOn="@string/gift_unlike_button_label"
     		    android:textSize="@dimen/small_text" />

     		<ToggleButton
     		    android:id="@+id/gift_flag_button"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:layout_weight="1"
     		    android:onClick="flagGiftAction"
     		    android:textOff="@string/gift_flag_button_label"
     		    android:textOn="@string/gift_unflag_button_label"
     		    android:text="@string/gift_flag_button_label"
     		    android:textSize="@dimen/small_text" />
     			    
        </LinearLayout>
	
		
</LinearLayout>